classDiagram
    class Game {
        -Tile[, ] _world
        -Player _player
        
        +void StartGame()
        +void MoveAction()
        -bool Move(int[] direction)
    }
    class Tile {
        <<abstract>>
        
        +bool Entered
        ?+bool Enterable
        
        ?+void PlayerEnterAction(Player)
    }
    
    class Entity {
        <<abstract>>
        +int MaxHealth
        +int Health
        ?+string name
        
        ?+void ProcessAttack(Attack)
    }
    class Player {
        +List:Weapon Weapons
        +int WeaponIndex
        +int[2] Location
        
    }
    class Enemy {
        <<abstract>>
    }
    
    class Weapon {
        <<abstract>>
        ?+string Name
        
        ?+Attack GenerateAttack()
    }
    
    class Attack {
        +int Damage
    }
    
    Game --> Tile
    Game --> Player
    
    Entity <-- Enemy
    Entity --> Attack
    Entity <-- Player
    
    Weapon --> Attack
